color change less warnings

--- a/src/languages.properties
+++ b/src/languages.properties
@@ -1,4 +1,9 @@
+Column=Column
 Continue=Continue
-Main\ Menu=Main Megnu
+Grid\ Size=Grid Size
+Main\ Menu=Main Menu
 Pause=Pause
+Row=Row
 Score=Score
+Settings=Settings
+Tile\ Size=Tile Size
